<resources>
    <string name="app_name">MyAppProject</string>
    <string name="fav">Favourite</string>
    <string name="search">Search</string>
    <string name="map">Map</string>
    <string name="home">Home</string>
    <string name="api">d0aad5b7-d828-4530-9b29-919746a39518</string>
    <string name="loading">LOADING…</string>
    <string name="pressure_label">Pressure:</string>
    <string name="temperature_label">Temperature:</string>
    <string name="wind_label">Wind:</string>
    <string name="humidity_label">Humidity:</string>
    <string name="air_quality_label">Air Quality Index:</string>
    <string name="title_activity_search">SearchActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
